[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Screenshot from 2022-09-26 11-33-18.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HomePage.gd" type="Script" id=2]
[ext_resource path="res://Assets/Theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.101961, 0.105882, 1 )

[node name="HomePage" type="TextureRect"]
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 3 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 1186.0
margin_top = 216.0
margin_right = 1567.0
margin_bottom = 459.0

[node name="ResearchBtn" type="Button" parent="."]
margin_left = -407.963
margin_top = -532.0
margin_right = -132.963
margin_bottom = -472.0
flat = true

[node name="UploadBtn" type="Button" parent="."]
visible = false
margin_left = 53.0
margin_top = 753.0
margin_right = 819.0
margin_bottom = 879.0
custom_styles/normal = SubResource( 1 )
text = "Upload"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2

[node name="ContactBtn" type="Button" parent="."]
margin_left = 891.0
margin_top = 11.0
margin_right = 1107.0
margin_bottom = 69.0
flat = true

[node name="LoginBtn" type="Button" parent="."]
margin_left = 1584.0
margin_top = 23.0
margin_right = 1885.0
margin_bottom = 71.0
flat = true

[node name="Hider" type="ColorRect" parent="."]
visible = false
margin_left = 33.0
margin_top = 752.0
margin_right = 834.0
margin_bottom = 878.0
color = Color( 0.0941176, 0.101961, 0.105882, 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 588.0
margin_top = 38.0
margin_right = 799.0
margin_bottom = 88.0
text = "Test
"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="UploadBtn" to="." method="_on_UploadBtn_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="LoginBtn" to="." method="_on_LoginBtn_pressed"]
